# WorklowLens

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml
grafana/: README.md
otel-collector/: config.yaml
prometheus/: prometheus.yml
tool_logger_client_csharp/: CLAUDE.md  README.md  ToolLoggerClient.sln
tool_logger_client_python/: CLAUDE.md  README.md  pyproject.toml
tool_logger_client_python/Document/: overview.md
tool_logger_client_python/Document/features/: session-management.md  udp-sender.md
tool_logger_client_python/src/tool_logger_client/: __init__.py  client.py  event_type.py  log_message.py
tool_logger_client_python/tests/: test_client.py  test_log_message.py
tool_logger_middleware/: CLAUDE.md  Cargo.toml  README.md  go.mod
tool_logger_server/: .gitignore  CLAUDE.md  go.mod
workflow_lens_client_csharp/: CLAUDE.md  README.md  WorkflowLensClient.sln
workflow_lens_client_python/: CLAUDE.md  README.md  pyproject.toml
workflow_lens_client_python/Document/: overview.md
workflow_lens_client_python/Document/features/: auto-session.md  category-logger.md  decorator-support.md  middleware-process.md  opentelemetry.md  options-pattern.md  session-management.md  udp-sender.md
workflow_lens_client_python/src/workflow_lens_client/: __init__.py  _telemetry.py  category.py  category_logger.py  client.py  log_message.py  options.py
workflow_lens_client_python/tests/: test_client.py  test_log_message.py
workflow_lens_middleware/: CLAUDE.md  README.md  go.mod
workflow_lens_server/: .gitignore  CLAUDE.md  go.mod  go.sum
(+109 files in other folders)
