[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tool-logger-client"
version = "0.1.0"
description = "tool_logger用UDPクライアントライブラリ"
requires-python = ">=3.7"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
